# OSuRV_2023

./: LICENSE  README.md  doc.txt  flow.sh  v1_notes.txt  v2_notes.txt  wscript
Common/FW/: avr_io_bitfields.h
Common/HW/: Extra_Common.kicad_sym  RS-422.dcm  RS-422.lib
Common/SW/: Gen_Struct.jl  Units.jl  Utils.jl
Docs/: .~lock.Ross less chassis.odt#  .~lock.dokumentacija.odt#  Ross less chassis.odt  doc.odt  dokumentacija.odt
HW/: RPi_Pins.xls
ROS/arm_and_chassis_ws/: flow.sh  tmuxer.cfg.py  tmuxer.py
ROS/arm_and_chassis_ws/src/common_teleop/: CMakeLists.txt
ROS/arm_and_chassis_ws/src/common_teleop/launch/: _common_teleop.launch  routines_teleop.launch
ROS/arm_and_chassis_ws/src/common_teleop/routines/s3a/: _common.moveitcmd  _fun_nail_pick.moveitcmd  close_gripper.moveitcmd  demo_nail_picker.moveitcmd  home.moveitcmd  nail_open_gripper.moveitcmd  open_gripper.moveitcmd  train_nail_picker.moveitcmd
ROS/arm_and_chassis_ws/src/common_teleop/scripts/: change_controller.py
ROS/arm_and_chassis_ws/src/common_teleop/src/: eventer_teleop.py  joy_remapper.py  mode_teleop.py  routines_server.py  routines_teleop.py  tf_publish.cpp
ROS/arm_and_chassis_ws/src/common_teleop/src/chassis_commander/: interpreter.py
ROS/arm_and_chassis_ws/src/common_teleop/src/snapshooter/: snapshooter.cpp  snapshooter.hpp  snapshooter_node.cpp
RPi_Vision_Ball_Tracking_LPRS2_MAX1000_Automotive/: README.md
SW/Driver/: flow_cross_compile.sh
SW/Scripts/: conv.py
s4a/Docs/: Manipulator ROT3U 6DOF Aluminium Robot Arm Mechanical Robotic Clamp Claw for Arduino Silver.doc
(+209 files in other folders)
